{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 13,
  "lineage": "fc610d32-9ec9-c675-f05e-43326c21ed3c",
  "resources": [
    {
      "module": "module.network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "private_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.16.1",
            "id": "projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-private",
            "ip_cidr_range": "10.0.16.0/20",
            "name": "vasten-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
            "private_ip_google_access": true,
            "project": "tactile-acolyte-282822",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-private"
          }
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "data",
      "type": "google_compute_subnetwork",
      "name": "public_subnetwork",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "gateway_address": "10.0.0.1",
            "id": "projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-public",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "vasten-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
            "private_ip_google_access": true,
            "project": "tactile-acolyte-282822",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-public"
          }
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-30T03:30:11.158-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tactile-acolyte-282822/global/firewalls/vasten-ssh-public",
            "name": "vasten-ssh-public",
            "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
            "priority": 1000,
            "project": "tactile-acolyte-282822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/firewalls/vasten-ssh-public",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "vasten-nat"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "default2",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2020-07-30T03:30:52.541-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tactile-acolyte-282822/global/firewalls/vasten-ssh-private",
            "name": "vasten-ssh-private",
            "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
            "priority": 1000,
            "project": "tactile-acolyte-282822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/firewalls/vasten-ssh-private",
            "source_ranges": [
              "10.0.0.0/20",
              "10.0.16.0/20"
            ],
            "source_service_accounts": null,
            "source_tags": [
              "vasten-no-ip"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.network.google_compute_subnetwork.vpc_subnetwork_public"
          ]
        }
      ]
    },
    {
      "module": "module.network.module.network_firewall",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "private_allow_all_network_inbound",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "1-65535"
                ],
                "protocol": "udp"
              },
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2020-07-30T03:30:11.170-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": false,
            "id": "projects/tactile-acolyte-282822/global/firewalls/vasten-private-allow-ingress",
            "name": "vasten-private-allow-ingress",
            "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
            "priority": 1000,
            "project": "tactile-acolyte-282822",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/firewalls/vasten-private-allow-ingress",
            "source_ranges": [],
            "source_service_accounts": null,
            "source_tags": [
              "vasten-nat",
              "vasten-no-ip"
            ],
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "NAT_instance",
      "each": "list",
      "provider": "provider.google"
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "NAT_instance_ext",
      "each": "list",
      "provider": "provider.google",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-9-stretch-v20200714",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/zones/us-central1-a/disks/vasten-nat-instance"
              }
            ],
            "can_ip_forward": true,
            "cpu_platform": "Intel Haswell",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/tactile-acolyte-282822/zones/us-central1-a/instances/vasten-nat-instance",
            "instance_id": "4946816954293755825",
            "label_fingerprint": "cqsb5CvYhCQ=",
            "labels": {
              "deployment_name": "vasten"
            },
            "machine_type": "n1-standard-1",
            "metadata_fingerprint": "hEsSqhoDhxA=",
            "metadata_startup_script": "sudo mkdir /home/test \u0026\u0026 sudo /bin/sleep 30 \u0026\u0026 sudo sysctl -w net.ipv4.ip_forward=1 \u0026\u0026 sudo iptables -t nat -A POSTROUTING -o $(/sbin/ifconfig | head -1 | awk -F: {'print $1'}) -j MASQUERADE ",
            "name": "vasten-nat-instance",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "104.198.73.251",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
                "network_ip": "10.0.0.2",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-public",
                "subnetwork_project": "tactile-acolyte-282822"
              }
            ],
            "project": "tactile-acolyte-282822",
            "scheduling": [
              {
                "automatic_restart": true,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/zones/us-central1-a/instances/vasten-nat-instance",
            "service_account": [
              {
                "email": "vasten-service-account@tactile-acolyte-282822.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "tags": [
              "vasten-nat"
            ],
            "tags_fingerprint": "zVzaH_BknKU=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "module.gke_cluster.null_resource.module_depends_on2",
            "module.network.google_compute_network.vpc",
            "module.network.google_compute_subnetwork.vpc_subnetwork_private",
            "module.network.google_compute_subnetwork.vpc_subnetwork_public",
            "module.network.null_resource.dependency_setter2"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "vpc",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/tactile-acolyte-282822/global/networks/vasten-network",
            "name": "vasten-network",
            "project": "tactile-acolyte-282822",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network"
          }
        }
      ]
    },
    {
      "module": "module.gke_cluster",
      "mode": "managed",
      "type": "google_compute_route",
      "name": "router",
      "each": "list",
      "provider": "provider.google",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_router",
      "name": "vpc_router",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-07-30T03:30:11.285-07:00",
            "id": "projects/tactile-acolyte-282822/regions/us-central1/routers/vasten-router",
            "name": "vasten-router",
            "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
            "project": "tactile-acolyte-282822",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/regions/us-central1/routers/vasten-router"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_private",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-07-30T03:30:11.366-07:00",
            "gateway_address": "10.0.16.1",
            "id": "projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-private",
            "ip_cidr_range": "10.0.16.0/20",
            "name": "vasten-subnetwork-private",
            "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
            "private_ip_google_access": true,
            "project": "tactile-acolyte-282822",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.16.0/20",
                "range_name": "private-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-private"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "vpc_subnetwork_public",
      "provider": "provider.google",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2020-07-30T03:30:11.590-07:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-public",
            "ip_cidr_range": "10.0.0.0/20",
            "name": "vasten-subnetwork-public",
            "network": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/global/networks/vasten-network",
            "private_ip_google_access": true,
            "project": "tactile-acolyte-282822",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.0.0/20",
                "range_name": "public-services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/tactile-acolyte-282822/regions/us-central1/subnetworks/vasten-subnetwork-public"
          },
          "dependencies": [
            "module.network.google_compute_network.vpc"
          ]
        }
      ]
    }
  ]
}